<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/monCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_picker_mon" />

    <CheckBox
        android:id="@+id/tuesCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_picker_tues" />

    <CheckBox
        android:id="@+id/wedCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_picker_wed" />

    <CheckBox
        android:id="@+id/thursCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_picker_thurs" />

    <CheckBox
        android:id="@+id/friCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_picker_fri" />

    <CheckBox
        android:id="@+id/satCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_picker_sat" />

    <CheckBox
        android:id="@+id/sunCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_picker_sun" />

</LinearLayout>