<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add_alarm"
        android:orderInCategory="0"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_add_alarm"/>
    <item
        android:id="@+id/action_wok_shortcut"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_wok_shortcut"/>
    <item
        android:id="@+id/action_sdm_shortcut"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_sdm_shortcut"/>
    <item
        android:id="@+id/action_ppp_shortcut"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_ppp_shortcut"/>

</menu>