<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin"
    tools:context=".AlarmEditorActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/time_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/alarm_edit_time_lbl" />

        <Button
            android:id="@+id/time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_edit_time_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/days_display"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/alarm_edit_days_hint" />

        <Button
            android:id="@+id/days_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_edit_days_btn" />
    </LinearLayout>

    <EditText
        android:id="@+id/desc_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarm_edit_desc_hint" />

</LinearLayout>