<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wok_bg"
    tools:context=".Game_WrathOfKresch" >

    <!-- RelativeLayout so we can add padding to only these elements and not the start-screen elements -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- Red ImageButton -->
        <ImageButton
            android:id="@+id/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/activity_nav_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="#00000000"
            android:contentDescription="@string/wok_red_button"
            android:src="@drawable/wok_button_red"
            android:visibility="gone" />

        <!-- Yellow ImageButton -->
        <ImageButton
            android:id="@+id/yellow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_nav_margin"
            android:background="#00000000"
            android:contentDescription="@string/wok_yellow_button"
            android:src="@drawable/wok_button_yellow"
            android:visibility="gone" />

        <!-- Green  ImageButton -->
        <ImageButton
            android:id="@+id/green_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_nav_margin"
            android:background="#00000000"
            android:contentDescription="@string/wok_green_button"
            android:src="@drawable/wok_button_green"
            android:visibility="gone" />
        
        <ImageView
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/progress_bar"
            android:src="@drawable/progress_bar"
            android:visibility="gone" />
    </RelativeLayout>

    <!-- Full-screen relative layout for the translucent overlay -->
    <RelativeLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/game_overlay" />

    <!-- Button which starts the game -->
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="startGame"
        android:text="@string/wok_start_button"
        android:textColor="@android:color/white"
        android:textSize="@dimen/game_start_button_text_size" />
    
    <!-- Description/Instructions for this game -->
    <TextView
        android:id="@+id/game_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/game_desc_bottom_margin"
        android:text="@string/wok_start_desc"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/fail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/game_fail_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/game_start_button_text_size"
        android:visibility="gone" />

</RelativeLayout>