<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/penpen_bg"
    tools:context=".Game_PenpenPoke" >

    <!-- RelativeLayout so we can add padding to only these elements and not the start-screen elements -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- Penpen ImageButton -->
        <ImageButton
            android:id="@+id/penpen_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:contentDescription="@string/ppp_penpen_button"
            android:src="@drawable/penpen_snooze1" />
        
        <ImageView
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="@string/progress_bar"
            android:src="@drawable/progress_bar"
            android:visibility="gone" />
    </RelativeLayout>

    <!-- Full-screen relative layout for the translucent overlay -->
    <RelativeLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/game_overlay" />

    <!-- Button which starts the game -->
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="startGame"
        android:text="@string/ppp_start_button"
        android:textColor="@android:color/white"
        android:textSize="@dimen/game_start_button_text_size" />
    
    <!-- Description/Instructions for this game -->
    <TextView
        android:id="@+id/game_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/game_desc_bottom_margin"
        android:text="@string/ppp_start_desc"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/fail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/game_fail_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/game_start_button_text_size"
        android:visibility="gone" />

</RelativeLayout>
